# san2patch

./: .env_example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
san2patch/: consts.py  context.py  types.py
san2patch/dataset/: base_dataset.py
san2patch/dataset/reproducer/: reproducer.py
san2patch/dataset/test/: __init__.py  final_dataset.py  san2patch_dataset.py  vulnloc_dataset.py
san2patch/patching/: patcher.py  validator.py
san2patch/patching/context/: code_context.py
san2patch/patching/graph/: comprehend_graph.py  howtofix_graph.py  patching_graph.py  runpatch_graph.py  wheretofix_graph.py
san2patch/patching/graph/ablation/: cot_comprehend_graph.py  cot_howtofix_graph.py  cot_patching_graph.py  cot_runpatch_graph.py  cot_wheretofix_graph.py  no_context_patching_graph.py  zeroshot_patching_graph.py
san2patch/patching/llm/: anthropic_llm_patcher.py  base_llm_patcher.py  google_llm_patcher.py  openai_llm_patcher.py
san2patch/patching/prompt/: base_prompts.py  eval_prompts.py  patch_prompts.py  slicing_prompts.py
san2patch/patching/prompt/templates/: basic_system.jinja2
san2patch/patching/prompt/templates/comprehend/: comprehend.jinja2  comprehend_aggregate.jinja2  get_stack_trace.jinja2  root_cause.jinja2  vuln_type.jinja2
san2patch/patching/prompt/templates/genpatch/: fix_build_error.jinja2  genpatch_code.jinja2  genpatch_code_simple.jinja2
san2patch/utils/: cmd.py  decorators.py  enum.py  jinja.py  langsmith.py  logger.py  reducers.py  str.py
scripts/: kill_run_test.sh  run_dataset.py  run_test.py  start_aim_client.sh
(+11 files in other folders)
